# etl-tienda

./: .gitignore  README.md  definitions.py  pyproject.toml  requirements.txt
.dagster_home/.telemetry/: id.yaml
.dagster_home/history/: runs.db
.dagster_home/history/runs/: .db  21970135-7433-4a16-b2d8-fde410d8f2c4.db  index.db
.dagster_home/schedules/: schedules.db
.dagster_home/storage/: campaigns  dim_campaigns  dim_dates  dim_products  dim_time  products
.dagster_home/storage/21970135-7433-4a16-b2d8-fde410d8f2c4/compute_logs/: cvahgzoy.err  enbrqadk.err  exqcqudc.err  fszvnpfv.err  gyepitrj.err  hsjkvdle.err  hwudljfm.err  japvuwbk.err  jupklddp.err  nlessdzf.err  rgeriavf.err  tahemtsb.err  ttnjzxow.err  twqwkvpm.err  ykwqtypb.err  ypbnfiva.err
assets/: extract.py  load.py  transform.py
resources/: extract_path.py  hive_resource.py
