[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.13.4",
    "dagster-webserver>=1.13.4",
    "hdfs>=2.7.3",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pyhive>=0.7.0",
    "sqlalchemy>=2.0.49",
    "thrift-sasl>=0.4.3",
]

[tool.dagster]
module_name = "definitions"
